--- a/po/de.po
+++ b/po/de.po
@@ -10,9 +10,9 @@
 # Cooligan <ppt23@lkj.hopto.org>, 2012
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins\n"
+"Project-Id-Version: Audacious Plugins Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2014-01-03 15:51+0100\n"
+"POT-Creation-Date: 2014-02-22 00:13+0100\n"
 "PO-Revision-Date: 2013-11-20 12:48+0000\n"
 "Last-Translator: Radioactiveman <thomas-lange2@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/projects/p/audacious/"
@@ -2241,7 +2241,27 @@ msgstr ""
 msgid "Global Hotkeys"
 msgstr "Globale Tastenkürzel"
 
-#: src/jack/jack.c:410
+#: src/jack/jack.c:193
+msgid "Connect to all available jack ports"
+msgstr "Mit allen verfügbaren Ports verbinden"
+
+#: src/jack/jack.c:194
+msgid "Connect only the output ports"
+msgstr "Nur mit Ausgabeports verbinden"
+
+#: src/jack/jack.c:195
+msgid "Don't connect to any port"
+msgstr "Mit keinem Port verbinden"
+
+#: src/jack/jack.c:199
+msgid "Connection mode:"
+msgstr "Verbindungsmodus:"
+
+#: src/jack/jack.c:202
+msgid "Enable debug printing"
+msgstr "Debug-Ausgaben aktivieren"
+
+#: src/jack/jack.c:430
 msgid ""
 "Based on xmms-jack, by Chris Morgan:\n"
 "http://xmms-jack.sourceforge.net/\n"
@@ -2253,7 +2273,7 @@ msgstr ""
 "\n"
 "Portiert für Audacious von Giacomo Lozito"
 
-#: src/jack/jack.c:416
+#: src/jack/jack.c:436
 msgid "JACK Output"
 msgstr "JACK Ausgabe"
 
