--- a/po/fr.po
+++ b/po/fr.po
@@ -10,11 +10,11 @@
 # Alain-Olivier  Breysse, 2013-2014
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2014-03-23 20:36+0100\n"
-"PO-Revision-Date: 2014-03-21 09:16+0000\n"
-"Last-Translator: Radioactiveman <thomas-lange2@gmx.de>\n"
+"POT-Creation-Date: 2014-04-21 23:02+0200\n"
+"PO-Revision-Date: 2014-04-11 16:41+0000\n"
+"Last-Translator: Alain-Olivier  Breysse\n"
 "Language-Team: French (http://www.transifex.com/projects/p/audacious/"
 "language/fr/)\n"
 "Language: fr\n"
@@ -23,19 +23,19 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: src/aac/libmp4.c:99 src/gtkui/ui_statusbar.c:82
+#: src/aac/libmp4.c:98 src/gtkui/ui_statusbar.c:82
 msgid "mono"
 msgstr "mono"
 
-#: src/aac/libmp4.c:99 src/gtkui/ui_statusbar.c:84
+#: src/aac/libmp4.c:98 src/gtkui/ui_statusbar.c:84
 msgid "stereo"
 msgstr "stereo"
 
-#: src/aac/libmp4.c:99
+#: src/aac/libmp4.c:98
 msgid "surround"
 msgstr "son ambiophonique"
 
-#: src/aac/libmp4.c:314
+#: src/aac/libmp4.c:313
 msgid "AAC (MP4) Decoder"
 msgstr "Décodeur AAC (MP4)"
 
@@ -106,7 +106,7 @@ msgstr ""
 "\n"
 "  Heure :\n"
 "    Choisir l'heure à laquelle l'alarme se déclenchera\n"
-"    ce jour-là ou cocher l'utilisation de l'horaire par défaut.\n"
+"    chaque jour ou cocher l'utilisation de l'horaire par défaut.\n"
 "\n"
 "\n"
 
@@ -132,21 +132,21 @@ msgid ""
 "\n"
 msgstr ""
 "Volume\n"
-"Fondu :\n"
-"Ajuste le volume au niveau choisi\n"
-"pour cette durée.\n"
+"  Fondu :\n"
+"    Ajuste le volume au niveau choisi\n"
+"    pour cette durée.\n"
 "\n"
-"Débute à :\n"
-"Commence le fondu à ce volume.\n"
+"  Commence à :\n"
+"    Commence le fondu à ce volume.\n"
 "\n"
-"Final :\n"
-"Le volume final du fondu. Si le fondu\n"
-"est à 0 le volume est réglé ainsi et la lecture\n"
-"commence.\n"
+"  Fini à :\n"
+"    Le volume final du fondu. Si le fondu\n"
+"    est à 0 le volume est réglé ainsi et la lecture\n"
+"    commence.\n"
 "\n"
 "Options :\n"
-"Commandes additionnelles :\n"
-"Exécute cette commande à l'heure de l'alarme.\n"
+"  Commandes additionnelles :\n"
+"    Exécute cette commande à l'heure de l'alarme.\n"
 "\n"
 
 #: src/alarm/interface.c:66
@@ -162,16 +162,16 @@ msgid ""
 "    Type the reminder in the box and turn on the\n"
 "    toggle button if you want it to be shown."
 msgstr ""
-"Liste de lecture :\n"
-"Charger cette liste de lecture. Si aucune liste\n"
-"de lecture n'est précisée, la liste de lecture\n"
-"actuelle sera utilisée. L'URL d'un flux mp3/ogg\n"
-"peu aussi être choisie.\n"
+"  Liste de lecture :\n"
+"    Charger cette liste de lecture. Si aucune liste\n"
+"    de lecture n'est précisée, la liste de lecture\n"
+"    actuelle sera utilisée. L'URL d'un flux mp3/ogg\n"
+"    peu aussi être choisie.\n"
 "\n"
-"Pense-bête :\n"
-"Afficher un pense-bête quand l'alarme se déclenche.\n"
-"Saisir le rappel dans le champs de texte et cocher\n"
-"la case pour que le rappel soit affiché."
+"  Pense-bête :\n"
+"    Afficher un pense-bête quand l'alarme se déclenche.\n"
+"    Saisir le rappel dans le champs de texte et cocher\n"
+"    la case pour que le rappel soit affiché."
 
 #: src/alarm/interface.c:85
 msgid "This is your wakeup call."
@@ -215,13 +215,13 @@ msgstr "Dimanche"
 
 #: src/alarm/interface.c:179
 msgid "Alarm Settings"
-msgstr "Paramètres de l'alarme"
+msgstr "Alarm Settings"
 
 #: src/alarm/interface.c:180 src/filewriter/mp3.c:690
 msgid "_OK"
 msgstr "_OK"
 
-#: src/alarm/interface.c:180 src/amidi-plug/i_configure-fluidsynth.c:53
+#: src/alarm/interface.c:180 src/amidi-plug/i_configure-fluidsynth.c:55
 #: src/aosd/aosd_ui.c:930 src/filewriter/mp3.c:690 src/hotkey/gui.c:486
 msgid "_Cancel"
 msgstr "_Annuler"
@@ -287,7 +287,7 @@ msgstr "Commencer à"
 
 #: src/alarm/interface.c:359
 msgid "Final"
-msgstr "Final"
+msgstr "Finir à"
 
 #: src/alarm/interface.c:374
 msgid "Current"
@@ -427,19 +427,19 @@ msgstr "<b>Synthétiseur</b>"
 msgid "Sampling rate:"
 msgstr "Fréquence d'échantillonnage :"
 
-#: src/amidi-plug/i_configure-fluidsynth.c:50
+#: src/amidi-plug/i_configure-fluidsynth.c:52
 msgid "AMIDI-Plug - select SoundFont file"
 msgstr "AMIDI-Plug - choix du fichier SoundFont"
 
-#: src/amidi-plug/i_configure-fluidsynth.c:54
+#: src/amidi-plug/i_configure-fluidsynth.c:56
 msgid "_Open"
 msgstr "_Ouvrir"
 
-#: src/amidi-plug/i_configure-fluidsynth.c:225
+#: src/amidi-plug/i_configure-fluidsynth.c:227
 msgid "Filename"
 msgstr "Nom du fichier"
 
-#: src/amidi-plug/i_configure-fluidsynth.c:229
+#: src/amidi-plug/i_configure-fluidsynth.c:231
 msgid "Size (bytes)"
 msgstr "Taille (octets)"
 
@@ -644,7 +644,7 @@ msgstr "Décalage vertical Y :"
 
 #: src/aosd/aosd_ui.c:238
 msgid "Max OSD width:"
-msgstr "Largeur d'affichage à l'écran maximale :"
+msgstr "Largeur maximale d'affichage à l'écran :"
 
 #: src/aosd/aosd_ui.c:249
 msgid "Multi-Monitor options"
@@ -1145,57 +1145,57 @@ msgstr "Cristalliseur "
 msgid "Cue Sheet Plugin"
 msgstr "Greffon des fichiers .cue"
 
-#: src/delete-files/delete-files.c:47
+#: src/delete-files/delete-files.c:48
 #, c-format
 msgid "Error moving %s to trash: %s."
 msgstr "Erreur lors du déplacement de %s vers la corbeille : %s."
 
-#: src/delete-files/delete-files.c:59
+#: src/delete-files/delete-files.c:60
 #, c-format
 msgid "Error deleting %s: %s."
 msgstr "Erreur lors de la suppression de %s : %s."
 
-#: src/delete-files/delete-files.c:97
+#: src/delete-files/delete-files.c:98
 #, c-format
 msgid "Error deleting %s: not a local file."
 msgstr "Erreur lors de la suppression de %s : n'est pas un fichier local."
 
-#: src/delete-files/delete-files.c:118
+#: src/delete-files/delete-files.c:119
 msgid "Do you want to move the selected files to the trash?"
 msgstr "Voulez-vous déplacer les fichiers sélectionnés vers la corbeille ?"
 
-#: src/delete-files/delete-files.c:119
+#: src/delete-files/delete-files.c:120
 msgid "Move to Trash"
 msgstr "Déplacer vers la corbeille"
 
-#: src/delete-files/delete-files.c:124
+#: src/delete-files/delete-files.c:125
 msgid "Do you want to permanently delete the selected files?"
 msgstr "Voulez-vous supprimer définitivement les fichiers sélectionnés ?"
 
-#: src/delete-files/delete-files.c:125 src/skins/preset-list.c:416
+#: src/delete-files/delete-files.c:126 src/skins/preset-list.c:416
 #: src/skins/preset-list.c:432
 msgid "Delete"
 msgstr "Supprimer"
 
-#: src/delete-files/delete-files.c:129 src/skins/preset-browser.c:56
+#: src/delete-files/delete-files.c:130 src/skins/preset-browser.c:56
 #: src/skins/preset-list.c:311 src/skins/ui_playlist.c:224
 #: src/sndio/sndio.c:424
 msgid "Cancel"
 msgstr "Annuler"
 
-#: src/delete-files/delete-files.c:130 src/delete-files/delete-files.c:171
+#: src/delete-files/delete-files.c:131 src/delete-files/delete-files.c:172
 msgid "Delete Files"
 msgstr "Supprimer les fichiers"
 
-#: src/delete-files/delete-files.c:146
+#: src/delete-files/delete-files.c:147
 msgid "Delete Selected Files"
 msgstr "Supprimer les fichiers sélectionnés"
 
-#: src/delete-files/delete-files.c:161
+#: src/delete-files/delete-files.c:162
 msgid "<b>Delete Method</b>"
 msgstr "<b>Méthode de suppression</b>"
 
-#: src/delete-files/delete-files.c:162
+#: src/delete-files/delete-files.c:163
 msgid "Move to trash instead of deleting immediately"
 msgstr "Déplacer vers la corbeille au lieu de supprimer immédiatement"
 
@@ -1237,7 +1237,7 @@ msgstr ""
 msgid "Echo"
 msgstr "Écho"
 
-#: src/ffaudio/ffaudio-core.c:581
+#: src/ffaudio/ffaudio-core.c:589
 msgid ""
 "Multi-format audio decoding plugin for Audacious using\n"
 "FFmpeg multimedia framework (http://www.ffmpeg.org/)\n"
@@ -1253,7 +1253,7 @@ msgstr ""
 "William Pitcock <nenolod@nenolod.net>\n"
 "Matti Hämäläinen <ccr@tnsp.org>"
 
-#: src/ffaudio/ffaudio-core.c:633
+#: src/ffaudio/ffaudio-core.c:641
 msgid "FFmpeg Plugin"
 msgstr "Greffon FFmpeg"
 
@@ -1323,12 +1323,12 @@ msgstr ""
 "est publiée par la « Free Software Foundation », en utilisant la version 2 "
 "de celle-ci, ou une version ultérieure (à votre discrétion).\n"
 "\n"
-"Ce programme est distribué car potentiellement utile, mais SANS AUCUNE "
-"GARANTIE, ni explicite ni implicite, y compris les garanties de "
+"Ce programme est distribué dans l'espoir qu'il vous sera utile, mais SANS "
+"AUCUNE GARANTIE, ni explicite ni implicite, y compris les garanties de "
 "COMMERCIALISATION ou d'ADAPTATION DANS UN BUT SPÉCIFIQUE. \n"
-"Reportez-vous à la Licence Publique Générale GNU pour plus de détails.\n"
+"Reportez-vous à la licence publique générale GNU pour plus de détails.\n"
 "\n"
-"Vous devez avoir reçu une copie de la Licence Publique Générale GNU en même "
+"Vous devez avoir reçu une copie de la licence publique générale GNU en même "
 "temps que ce programme ; si ce n’est pas le cas, écrivez à la Free Software "
 "Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA."
 
@@ -1642,6 +1642,10 @@ msgstr "Séparer"
 msgid "Disable"
 msgstr "Désactiver"
 
+#: src/gtkui/layout.c:226 src/search-tool/search-tool.c:786
+msgid "Search Tool"
+msgstr "Outil de recherche"
+
 #: src/gtkui/menus.c:127 src/statusicon/statusicon.c:262
 msgid "_Open Files ..."
 msgstr "_Ouvrir des fichiers..."
@@ -1829,7 +1833,7 @@ msgstr "_Exporter"
 
 #: src/gtkui/menus.c:207
 msgid "Playlist _Manager ..."
-msgstr "_Gestionnaire de liste de lecture..."
+msgstr "_Gestionnaire de listes de lecture..."
 
 #: src/gtkui/menus.c:208
 msgid "_Queue Manager ..."
@@ -1841,7 +1845,7 @@ msgstr "Augmenter le _volume"
 
 #: src/gtkui/menus.c:212
 msgid "Volume _Down"
-msgstr "_Réduirz le volume"
+msgstr "_Réduire le volume"
 
 #: src/gtkui/menus.c:214
 msgid "_Equalizer"
@@ -1925,7 +1929,7 @@ msgstr "_Renommer  …"
 
 #: src/gtkui/settings.c:35
 msgid "<b>Playlist Tabs</b>"
-msgstr "<b>Onglet de la liste de lecture</b>"
+msgstr "<b>Onglets de la liste de lecture</b>"
 
 #: src/gtkui/settings.c:36
 msgid "Always show tabs"
@@ -1954,11 +1958,11 @@ msgstr "<b>Divers</b>"
 
 #: src/gtkui/settings.c:51
 msgid "Arrow keys seek by:"
-msgstr "Déplacement par flèches :"
+msgstr "Avance/retour avec les flèches :"
 
 #: src/gtkui/settings.c:54
 msgid "Scroll on song change"
-msgstr "Déplacer vers le morceau courant"
+msgstr "Déplacer vers le morceau en cours"
 
 #: src/gtkui/ui_gtk.c:94
 msgid "GTK Interface"
@@ -2670,7 +2674,7 @@ msgstr ""
 "\n"
 "Ce programme est distribué car potentiellement utile, mais SANS AUCUNE "
 "GARANTIE, ni explicite ni implicite, y compris les garanties de "
-"COMMERCIALISATION ou d'ADAPTATION DANS UN BUT SPÉCIFIQUE. \n"
+"COMMERCIALISATION ou d'ADÉQUATION À UN BUT SPÉCIFIQUE. \n"
 "Reportez-vous à la Licence Publique Générale GNU pour plus de détails.\n"
 "\n"
 "Vous devez avoir reçu une copie de la Licence Publique Générale GNU en même "
@@ -2817,7 +2821,7 @@ msgstr ""
 "Vous devez autoriser Audacious à scrobbler vos pistes vers votre compte Last."
 "fm.\n"
 
-#: src/scrobbler2/scrobbler.c:218
+#: src/scrobbler2/scrobbler.c:220
 msgid ""
 "The Scrobbler plugin could not be started.\n"
 "There might be a problem with your installation."
@@ -2825,7 +2829,7 @@ msgstr ""
 "Le greffon scrobbler n'a pu être démarré.\n"
 "Il y a peut-être un problème avec votre installation."
 
-#: src/scrobbler2/scrobbler.c:294
+#: src/scrobbler2/scrobbler.c:296
 msgid ""
 "Audacious Scrobbler Plugin 2.0 by Pitxyoki,\n"
 "\n"
@@ -2844,7 +2848,7 @@ msgstr ""
 "ce projet.\n"
 "\n"
 
-#: src/scrobbler2/scrobbler.c:300
+#: src/scrobbler2/scrobbler.c:302
 msgid "Scrobbler 2.0"
 msgstr "Scrobbler 2.0"
 
@@ -2954,10 +2958,6 @@ msgstr "Veuillez patienter…"
 #: src/search-tool/search-tool.c:747
 msgid "Choose Folder"
 msgstr "Choisir un dossier"
-
-#: src/search-tool/search-tool.c:786
-msgid "Search Tool"
-msgstr "Outil de recherche"
 
 #: src/skins/menus.c:56
 msgid "Open Files ..."
@@ -3070,7 +3070,7 @@ msgstr "Exporter la liste de lecture..."
 
 #: src/skins/menus.c:104
 msgid "Playlist Manager ..."
-msgstr "Gestionnaire de liste de lecture..."
+msgstr "Gestionnaire de listes de lecture..."
 
 #: src/skins/menus.c:105
 msgid "Queue Manager ..."
@@ -4090,3 +4090,12 @@ msgstr "Décodeur 2SF"
 #: src/xspf/xspf.c:438
 msgid "XML Shareable Playlists (XSPF)"
 msgstr "Listes de lecture XSPF"
+
+#~ msgid "32.0 kHz:"
+#~ msgstr "32,0 kHz :"
+
+#~ msgid "88.2 kHz:"
+#~ msgstr "88,2 kHz :"
+
+#~ msgid "176.4 kHz:"
+#~ msgstr "176,4 kHz :"
